--- a/css/app.css
+++ b/css/app.css
@@ -666,8 +666,19 @@ ul {
     text-align: center;
 }
 /* Media queries */
-    /* ---------------------------------Sm---------- */
-    /* SMALL only */
+    /* ---------------------------------Sm--iphone5-------- */
+     {
+     .callout H4 {
+    font-family: 'Open Sans Condensed', sans-serif;
+    line-height: 43px;
+    font-size: 25px;
+    text-align: left;
+    color: darkslategray;
+    font-weight:bold;
+}
+}
+ /* ---------------------------------Sm---------- */
+/* SMALL only */
     /* 638px */
 @media screen and (max-width: 39.9375em) {
     /* @media screen and (max-width: 320px) { */
@@ -681,10 +692,11 @@ ul {
 .callout H4 {
     font-family: 'Open Sans Condensed', sans-serif;
     line-height: 43px;
-    font-size: 29px;
-    text-align: left;
+    font-size: 27px;
+    text-align: center;
     color: darkslategray;
-    font-weight:bold;
+    font-weight: bold;
+    margin-left: 16px;
 }
 
    .leslieTitle {
@@ -714,14 +726,14 @@ ul {
 
 .rezTitle{
     font-family:'Monofett', cursive; 
-    font-size:75px; 
+    font-size:73px; 
     text-align:left; 
     color:white;
 }
 
 .devHed {
     font-family: 'Pacifico', cursive;
-    font-size:50px;
+    font-size:49px;
     margin-right: 10px;
     line-height: 70px;
 }
@@ -737,7 +749,7 @@ ul {
 .image-hover-wrapper {
     position: relative;
     background: white;
-    margin-bottom: 2%;
+    margin: 1%;
     border-radius: 1%;
     padding: 5px;
     font-family: 'Open Sans Condensed', sans-serif;
@@ -754,7 +766,7 @@ ul {
 .webImage{
     /* display: inline-block; */
      vertical-align: middle;
-     max-width: 90%;
+     max-width: 100%;
    height: 45%;
   -ms-interpolation-mode: bicubic;
   display: block;
@@ -766,22 +778,25 @@ ul {
     display: none;
 }
 .image-hover-wrapper a .image-hover-wrapper-reveal p {
-    /* bottom: 20px; */
-    display: block;
+display: block;
     opacity: 0;
     position: absolute;
-    top: 90%;
-    left: 30%;
+    top: 65%;
+    left: 35%;
     color: black;
     background: white;
-    border: #FF4136 5px solid;
+    border: #FF4136 3px solid;
     border-radius: 14px;
-    padding: 2%;
     text-align: center;
-    width: 60%;
+    width: 20%;
+    height: 19%;
 }
 .hideDescribe{
   display: none;
+}
+
+.visitSmallTxt{
+    font-size:30px;
 }
 
 .smText{
@@ -797,7 +812,7 @@ ul {
 
 }
     #textCamera {
-        font-size: 30px;
+        font-size: 29px;
         color: white;
         padding-left: none;
         text-align: right;
@@ -806,7 +821,7 @@ ul {
     } 
 
     #textPencil{
-        font-size: 30px;
+        font-size: 29px;
         color: white;
         padding-left: none;
         margin-left: 20px;
@@ -938,6 +953,9 @@ ul {
 }
 .image-hover-wrapper {
     margin: 3%;
+}
+.image-hover-wrapper a .image-hover-wrapper-reveal p {
+    width: 45%;
 }
 
 #backTop {
