--- a/css/app.css
+++ b/css/app.css
@@ -116,6 +116,11 @@ font-size:210px;
     padding: 0px;
     color: white;
 }
+
+.paperLink a {
+    color:black;
+}
+
 #pencilColor:hover {
     color: navajowhite;
 }
