--- a/css/app.css
+++ b/css/app.css
@@ -56,9 +56,57 @@ font-size:210px;
         background: #ff7bac;
     }*/
 
-    /* START EXPANDER */
-    
-    /* END EXPANDER */
+    /* START  SWAP responsive icons --> */
+ 
+.social-links {
+  background: #FF4136;
+  padding: 2rem 0 1rem;
+}
+
+.social-links a {
+  color: white;
+  font-size: 2.2rem;
+      font-family: 'Open Sans Condensed', sans-serif;
+}
+
+.social-links i.fa {
+  font-size: 5rem;
+  padding-right: 0.8rem;
+  padding-bottom: 1rem;
+}
+
+.social-links i.fa:hover {
+    color: grey;
+}
+
+@media screen and (max-width: 39.9375em) {
+  .social-links {
+    padding: 2rem 0;
+  }
+  .social-links i.fa {
+    font-size: 2rem;
+    display: block;
+    padding-right: 0;
+    padding-bottom: 0.5rem;
+  }
+  .social-links a {
+    font-weight: bold;
+  }
+  .social-links .columns {
+    margin: 1rem 0;
+  }
+  .social-links .mobile-stack {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+   
+    /* END SWAP responsive icons */
 
 #talkInvite {
     font-size: 40px;
@@ -630,8 +678,8 @@ font-size: 50px;
 }
 #yearButton:hover {
     color: white;
-    background-color: salmon;
-    border: .5px solid #FF4136;
+    background-color: #FF4136;
+    border: 1px solid grey;
 }
 /*ALMOST WORKS HERE HERE */
 /*#yearButton:hover */
@@ -918,6 +966,76 @@ size: 20px;
     text-align: center;
 }
     }
+
+
+/* START TRY  responsive blog   */
+
+.responsive-blog-post {
+  margin-bottom: 4rem;
+  padding: 5rem;
+}
+
+h3 {
+        font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 36px;
+    color: black;
+    font-weight: bolder;
+}
+
+.responsive-blog-post p {
+      font-family: Georgia, Times, "Times New Roman", serif;
+    font-size: 20px;
+    font-style: normal;
+    line-height: 1.82857143;
+    color: #8a8a8a;
+}
+ p .baseTxt{
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 16px;
+    color: black;
+}
+
+
+.responsive-blog-post .button {
+  padding: 0.85rem 3rem;
+  background: #FF4136;
+}
+
+.responsive-blog-post .button:hover {
+  background-color: darksalmon;
+  transition: color 0.3s ease-in;
+}
+
+.responsive-blog-post .individual-post {
+  margin-bottom: 4rem;
+}
+
+.responsive-blog-post h4 {
+  margin-bottom: 0;
+}
+
+.responsive-blog-post h4:hover {
+  text-decoration: underline;
+  transition: color 0.3s ease-in;
+}
+
+@media screen and (max-width: 39.9375em) {
+  .responsive-blog-post h4 {
+    font-size: 1.5rem;
+  }
+}
+
+.responsive-blog-post img {
+  margin-bottom: 1.5rem;
+}
+
+.responsive-blog-post .date {
+  font-size: 0.8rem;
+  color: #8a8a8a;
+}
+
+
+/* END TRY  responsive blog   */
 
 
     /* --------------------------------Md---------- */
