--- a/css/app.css
+++ b/css/app.css
@@ -6,6 +6,8 @@ element.style {
 .off-canvas-content {
     overflow: hidden;
 }
+
+     
 body {
     background: #36c3e5;
     background: #FF4136;
@@ -389,6 +391,8 @@ color: #888;
 #offCanvasBottom1 {
     background: white;
     z-index: 100;
+    position: fixed;
+    top: 0%;
 }
 /*form*/
 
@@ -664,18 +668,19 @@ font-size: 50px;
 #yearButton {
     clear: both;
     text-align: center;
-    line-height: 0px;
     visibility: visible;
-    float: left;
+    float: right;
     background: white;
     color: #FF4136;
-    letter-spacing: none;
-    margin-top: 2px;
     border: .5px solid #666;
-    font-family: 'Nova Mono', monospace;
-    font-family: 'Space Mono', monospace;
-    font-family: 'Comfortaa', cursive;
+        font-family: 'Pacifico', cursive; 
+    font-size: 35px;
+    font-weight: lighter;
+        margin-top: -20px;
+        padding:5px;
 }
+
+
 #yearButton:hover {
     color: white;
     background-color: #FF4136;
@@ -972,12 +977,12 @@ size: 20px;
 
 .responsive-blog-post {
   margin-bottom: 4rem;
-  padding: 5rem;
+  padding: 3rem;
 }
 
 h3 {
         font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    font-size: 36px;
+    font-size: 30px;
     color: black;
     font-weight: bolder;
 }
