--- a/css/app.css
+++ b/css/app.css
@@ -66,7 +66,7 @@ font-size:210px;
 }
 
 .social-links a {
-  color: white;
+  color: white !important;
   font-size: 2.2rem;
       font-family: 'Open Sans Condensed', sans-serif;      
   background: #FF4136;
