--- a/css/app.css
+++ b/css/app.css
@@ -31,8 +31,7 @@ body {
     line-height: auto;
     margin-bottom: auto;
     /*     font-weight: bold; */
-    
-    font-size: 150px;
+        font-size: 150px;
 } 
 
 .mosesTitle {
@@ -396,6 +395,7 @@ color: #888;
     z-index: 100;
     position: fixed;
     top: 0%;
+    margin-top: 0px;
 }
 /*form*/
 
@@ -672,7 +672,7 @@ font-size: 50px;
     clear: both;
     text-align: center;
     visibility: visible;
-    float: right;
+    float: left;
     background: white;
     color: #FF4136;
     border: .5px solid #666;
@@ -731,7 +731,7 @@ ul {
     line-height: 43px;
     font-size: 25px;
     text-align: left;
-    color: darkslategray;
+    color: #444;
     font-weight:bold;
 }
 }
@@ -752,7 +752,7 @@ ul {
     line-height: 43px;
     font-size: 27px;
     text-align: center;
-    color: darkslategray;
+    color: #444;
     font-weight: bold;
     margin-left: 16px;
 }
@@ -878,7 +878,7 @@ size: 20px;
 
 }
     #textCamera {
-        font-size: 29px;
+        font-size: 25px;
         color: white;
         padding-left: none;
         text-align: center;
@@ -887,7 +887,7 @@ size: 20px;
     } 
 
     #textPencil{
-        font-size: 29px;
+        font-size: 25px;
         color: white;
         padding-left: none;
         margin-left: 20px;
@@ -903,7 +903,7 @@ size: 20px;
             /* margin-right: 100px; */
             padding: 0px;
             color: white;
-            font-size: 100px;
+            font-size: 80px;
             display: block;
         }
         #cameraFeel {
@@ -913,7 +913,7 @@ size: 20px;
             padding: 0px;
             margin-right: 50px;
             color: white;
-            font-size: 100px;
+            font-size: 80px;
             display: block;
         }
         #selfieFrame {
@@ -1056,6 +1056,34 @@ h3 {
         .days li .active {
             padding: 2px;
         }
+   .leslieTitle {
+    font-family: 'Pacifico', cursive;    
+    line-height: 45px;
+    margin-bottom: 20px;
+    margin-right: 10px;
+    font-size: 75px;
+      text-align: right;
+      /* display: block; */
+
+} 
+        .mosesTitle {
+            font-size: 110px;
+            line-height: 20px;
+            margin-left:1px;
+            /* display: block; */
+        }
+
+        .callout H4 {
+    font-family: 'Open Sans Condensed', sans-serif;
+    line-height: 43px;
+    font-size: 47px;
+    text-align: right;
+    color: #444;
+    font-weight: bold;
+    margin-left: 16px;
+    margin-top: 50px;
+     margin-bottom: 250px;
+}
         #textPencil {
             font-size: 48px;
             color: white;
@@ -1083,6 +1111,29 @@ h3 {
             font-family: "Helvetica", sans-serif;
             border: 7px solid #3e2b14;
         }
+
+        #yearButton {
+    clear: both;
+    text-align: center;
+    visibility: visible;
+    float: left;
+    background: white;
+    color: #FF4136;
+    border: .5px solid #666;
+        font-family: 'Pacifico', cursive; 
+    font-size: 55px;
+    font-weight: lighter;
+        margin-top: -20px;
+        padding:5px;
+}
+
+#offCanvasBottom1 {
+    background: white;
+    z-index: 100;
+    position: fixed;
+    top: 10%;
+    margin-top: -20px;
+}
  .image-hover-wrapper .image-hover-wrapper-banner {
 
     /* display: none; */
@@ -1117,7 +1168,11 @@ h3 {
             margin-right: 190px;
         }
     }
-
+/* -------------------------------X-Md---------- */
+/* X-md  */
+/* 64em--74em = 1024px to 1198px*/
+@media screen and (min-width: 64em) and (max-width: 74.9375em)
+{
 /* --------------------------------Lg---------- */
 /* Large only */
 /* 64em--74em = 1064px to 1198px*/
