--- a/css/foundation.css
+++ b/css/foundation.css
@@ -2979,7 +2979,7 @@ select {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 350px;
+  height: 100%;
   -ms-transform: translateY(90%);
       transform: translateY(90%);
   overflow-x: auto; }
