--- a/css/app.css
+++ b/css/app.css
@@ -173,13 +173,13 @@ font-size:210px;
 }
 #getYourTextColor {
     /* @extend .transition*/
-    margin-top: 20px;
+    /* margin-top: 20px; */
     background-color: #FF4136;
-    border: 1px solid #FF4136;
+    /* border: 1px solid #FF4136; */
     line-height: 0;
     display: inline-block;
     box-sizing: border-box;
-    padding: 20px 15px;
+    /* padding: 20px 15px; */
     /*      border-radius: 60px;*/
     color: white;
 /*     letter-spacing: 0.01em; */
@@ -187,8 +187,6 @@ font-size:210px;
     top: 20px;
     z-index: 1;
     font-size: 20px;
-    font-weight: bold;
-    font-family: 'Comfortaa', cursive;
 }
 #getYourTextColor:hover {
     color: white;
@@ -672,14 +670,14 @@ font-size: 50px;
     color: #FF4136;
     letter-spacing: none;
     margin-top: 2px;
-    border: .5px solid #666;
+    /* border: .5px solid #666; */
         font-family: 'Pacifico', cursive; 
 
         
 }
 
 
-#yearButton:hover {
+.button #yearButton:hover {
     color: white;
     background-color: #FF4136;
     border: 1px solid grey;
@@ -974,6 +972,10 @@ size: 20px;
     color: #FF4136;
     text-align: center;
 }
+
+element.style {
+    height: 563px;
+}
     }
 
 
@@ -1121,15 +1123,28 @@ h3 {
     line-height: 0px;
     background: white;
     color: #FF4136;
-    border: .5px solid #666;
+    /* border: .5px solid #666; */
         font-family: 'Pacifico', cursive; 
-    font-size: 55px;
-    font-weight: lighter;
-        margin-top: 2px;
+    font-size: 39px;
+    border:none;
+        /* margin-top: 2px; */
+            position: absolute;
+    top: 0%;
 }
+/* #yearButton:hover {
+    color: #FF4118 ; 
+} */
 
 #offCanvasBottom1 {
     background: white; 
+}
+
+.fa-smile-o{
+ color: #FF4136;
+}
+
+.fa-smile-o:hover{
+ color: darksalmon;
 }
  .image-hover-wrapper .image-hover-wrapper-banner {
 
