--- a/css/app.css
+++ b/css/app.css
@@ -652,7 +652,7 @@ font-size:110px;
 @media screen and (max-width: 39.9375em) {
     /* @media screen and (max-width: 320px) { */
 element.style {
-    height: 100%;
+    height: 720px;
 }
 .callout.large {
     padding-top: 1.5rem;
