--- a/css/app.css
+++ b/css/app.css
@@ -36,7 +36,7 @@ body {
 
 .mosesTitle {
 font-family:'Monofett', cursive; 
-font-size:210px;
+font-size:310px;
 }
 
 .callout H4 {
@@ -376,14 +376,7 @@ color: #FF4136;
 #offCanvasBottom1 {
     background: white; 
 }
- .fa-smile-o{
- color: #FF4136; 
- 
-}
 
-.fa-smile-o:hover{
- color: darksalmon; 
-}
 
 #yourTextColor {
     border-radius: 20%;
@@ -443,7 +436,7 @@ button #getColorButton:focus {
     background-color: #FF4136;
 }
 #backTop {
-    background: #666 ;
+    background: #FF4136 ;
     color: white;
     margin-top: 10px;
        
@@ -557,7 +550,7 @@ button #getColorButton:focus {
 .portfolio-resume-headshot {
   margin-bottom: 1rem;
   border-radius: 10%;
-  max-width:65%;
+  max-width:50%;
   max-height:50%
 }
 
@@ -730,7 +723,7 @@ element.style {
     font-family: 'Open Sans Condensed', sans-serif;
     font-size: 24px;
     display:inline-block;
-    max-width: 90%;
+    max-width: 88%;
 }
  #backTop {
     background: #FF4136;
@@ -979,7 +972,7 @@ h3 {
     /* --------------------------------Md---------- */
 /* Medium and up */
 /* 640px */
-@media screen and (min-width: 40em)  {
+@media screen and (min-width: 40em) and  (max-width: 63.9375em) {
         .weekdays li, .days li {
             width: 12.5%;
         }
@@ -1193,3 +1186,22 @@ h3 {
  
 } 
 
+/* Desktops and laptops ----------- */
+@media only screen  and (min-width : 1200px) {
+    
+    .mosesTitle {
+font-family:'Monofett', cursive; 
+font-size:210px;
+}
+
+        .callout H4 {
+    font-family: 'Open Sans Condensed', sans-serif;
+    line-height: 43px;
+    font-size: 47px;
+    text-align: right;
+    color: #444;
+    font-weight: bold;
+    margin-left: 16px;
+    margin-top: 50px;
+     margin-bottom: 250px;
+}
