--- a/css/app.css
+++ b/css/app.css
@@ -1,11 +1,6 @@
 
-element.style {
-    height: 935px;
-    z-index: 100;
-}
-.off-canvas-content {
-    overflow: hidden;
-}
+
+ 
 
      
 body {
@@ -55,7 +50,8 @@ font-size:310px;
         background: #ff7bac;
     }*/
 
-    /* START  SWAP responsive icons --> */
+    /* START  socials icons --> */
+ 
  
 .social-links {
   background: #FF4136;
@@ -63,20 +59,15 @@ font-size:310px;
 }
 
 .social-links a {
-  color: white !important;
-  font-size: 2.2rem;
-      font-family: 'Open Sans Condensed', sans-serif;      
-  background: #FF4136;
+  color: white;
+  font-size: 1.2rem;
 }
 
 .social-links i.fa {
-  font-size: 5rem;
+  font-size: 2.4rem;
   padding-right: 0.8rem;
   padding-bottom: 1rem;
-}
-
-.social-links i.fa:hover {
-    color: grey;
+  color: #333;
 }
 
 @media screen and (max-width: 39.9375em) {
@@ -88,11 +79,9 @@ font-size:310px;
     display: block;
     padding-right: 0;
     padding-bottom: 0.5rem;
-     background: #FF4136;
   }
   .social-links a {
     font-weight: bold;
-     color: white !important;
   }
   .social-links .columns {
     margin: 1rem 0;
@@ -107,8 +96,10 @@ font-size:310px;
   }
 }
 
+
+
    
-    /* END SWAP responsive icons */
+    /* END Socials icons */
 
 #talkInvite {
     font-size: 40px;
@@ -171,31 +162,7 @@ font-size:310px;
 #pencilColor:hover {
     color: navajowhite;
 }
-#getYourTextColor {
-    /* @extend .transition*/
-    /* margin-top: 20px; */
-    background-color: #FF4136;
-    /* border: 1px solid #FF4136; */
-    line-height: 0;
-    display: inline-block;
-    box-sizing: border-box;
-    /* padding: 20px 15px; */
-    /*      border-radius: 60px;*/
-    color: white;
-/*     letter-spacing: 0.01em; */
-    position: relative;
-    top: 20px;
-    z-index: 1;
-    font-size: 20px;
-}
-#getYourTextColor:hover {
-    color: white;
-    background-color: salmon;
-    border: 2px solid white;
-}
-#getYourTextColor:hover #pencilColor {
-    color: lightgreen;
-}
+ 
 
 #cameraFeel {
     float: right;
@@ -328,7 +295,7 @@ min-height: 100px; */
 .image-hover-wrapper a .image-hover-wrapper-reveal p {
     /* bottom: 20px; */
     display: block;
-    opacity: 0;
+    opacity: 1;
     position: absolute;
     top: 50%;
     left: 30%;
@@ -372,10 +339,6 @@ color: #FF4136;
 
 } */
 /* END CARO Pics  */
-
-#offCanvasBottom1 {
-    background: white; 
-}
 
 
 #yourTextColor {
@@ -469,6 +432,27 @@ button #getColorButton:focus {
   margin-bottom: 0.25rem;
 }
 
+.rounded-social-buttons .social-buttonHomePg {
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+  width: 2rem;
+  height: 3rem;
+  border: 0.125rem solid transparent;
+  padding: 0;
+  text-decoration: none;
+  text-align: center;
+  color: #fefefe;
+  font-size: 2rem;
+  font-weight: normal;
+  line-height: 1.5em;
+  border-radius: 1.6875rem;
+  transition: all 0.5s ease;
+  margin-right: 0.25rem;
+  margin-bottom: 0.25rem;
+}
+
+
 .boldRezHed {
     color: black;
 
@@ -550,8 +534,7 @@ button #getColorButton:focus {
 .portfolio-resume-headshot {
   margin-bottom: 1rem;
   border-radius: 10%;
-  max-width:50%;
-  max-height:50%
+  max-width:95%;
 }
 
 .portfolio-resume-header {
@@ -638,7 +621,7 @@ font-size:110px;
     line-height: 43px;
     font-size: 25px;
     text-align: left;
-    color: #444;
+    color: #555;
     font-weight:bold;
 }
 
@@ -647,9 +630,7 @@ font-size:110px;
     /* 638px */
 @media screen and (max-width: 39.9375em) {
     /* @media screen and (max-width: 320px) { */
-element.style {
-    height: 720px;
-}
+ 
 .callout.large {
     padding-top: 1.5rem;
     padding-right: .5rem;
@@ -662,7 +643,7 @@ element.style {
     line-height: 43px;
     font-size: 27px;
     text-align: center;
-    color: #444;
+    color: #555;
     font-weight: bold;
     margin-left: 16px;
 }
@@ -697,6 +678,10 @@ element.style {
     font-size:71px; 
     text-align:left; 
     color:white;
+}
+
+.portfolio-resume-headshot { 
+    max-width: 55%; 
 }
 
 .devHed {
@@ -748,7 +733,7 @@ element.style {
 }
 .image-hover-wrapper a .image-hover-wrapper-reveal p {
 display: block;
-    opacity: 0;
+    opacity: 1;
     position: absolute;
     top: 65%;
     left: 35%;
@@ -827,46 +812,7 @@ size: 20px;
             font-size: 80px;
             display: block;
         }
-        #selfieFrame {
-            padding: 0px;
-            height: 170px;
-            width: 1800px;
-            color: #FF4136;
-            margin-bottom: 0px;
-            margin-top: 5px;
-            background: white;
-            border-radius: 10%;
-            text-align: right;
-            border: 10px solid navajowhite;
-            padding: 0px;
-        }
-        #selfieCapture {
-            clear: both;
-            position: relative;
-            /*     display: inline-block; */
-            
-            width: 90%;
-            padding: 10px;
-            background-color: white;
-            border-radius: 40px;
-            margin-left: -8px;
-            font-family: "Helvetica", sans-serif;
-            border: 7px solid #3e2b14;
-        }
-        #selfieFrame {
-            padding: 20px;
-            height: 240px;
-            width: 75%;
-            color: #FF4136;
-            margin-bottom: 2px;
-            margin-left:10px;
-            margin-top: 20px;
-            background: white;
-            border-radius: 10%;
-            text-align: right;
-            border: 20px solid navajowhite;
-            padding: 10px;
-        }
+     
        
         #pencilColor {
             font-size: 220px;
@@ -885,17 +831,6 @@ size: 20px;
     text-align: center;
 }
 
-element.style {
-    height: 700px;
-}
-
-#yearButton {
-    border: none;
-}
-
-a#yearButton {
-    border: none;
-}
     }
 
 
@@ -973,12 +908,7 @@ h3 {
 /* Medium and up */
 /* 640px */
 @media screen and (min-width: 40em) and  (max-width: 63.9375em) {
-        .weekdays li, .days li {
-            width: 12.5%;
-        }
-        .days li .active {
-            padding: 2px;
-        }
+    
    .leslieTitle {
     font-family: 'Pacifico', cursive;    
     line-height: 45px;
@@ -1001,7 +931,7 @@ h3 {
     line-height: 43px;
     font-size: 47px;
     text-align: right;
-    color: #444;
+    color: #555;
     font-weight: bold;
     margin-left: 16px;
     margin-top: 50px;
@@ -1020,51 +950,11 @@ h3 {
         #textCamera {
             text-align: center;
         }
-        #selfieCapture {
-            clear: both;
-            position: relative;
-            /*     display: inline-block; */
-            
-            height: 200px;
-            width: 450px;
-            padding: 10px;
-            background-color: white;
-            border-radius: 40px;
-            margin: 1px;
-            font-family: "Helvetica", sans-serif;
-            border: 7px solid #3e2b14;
-        }
-
-#yearButton {
-    clear: both;
-    text-align: center;
-    visibility: visible;
-    float: left;
-    line-height: 0px;
-    background: white;
-    color: #FF4136;
-    /* border: .5px solid #666; */
-        font-family: 'Pacifico', cursive; 
-    font-size: 39px;
-    border:none;
-          margin-top: 2px; 
-    position: absolute;
-    top: 0%; 
-}
- 
-
-#offCanvasBottom1 {
-    background: white; 
+       .portfolio-resume-headshot { 
+    max-width: 35%; 
 }
 
-.fa-smile-o{
- color: #FF4136;
- 
-}
 
-.fa-smile-o:hover{
- color: darksalmon; 
-}
  .image-hover-wrapper .image-hover-wrapper-banner {
 
     /* display: none; */
@@ -1088,16 +978,12 @@ h3 {
             margin-top: 0px;
             letter-spacing: .01em;
         }
-        #selfieFrame {
-            padding: 20px;
-            height: 240px;
-            width: 75%;
-            margin-left: 30px;
-        }
+       
 
         #pencilColor {
             margin-right: 190px;
         }
+ 
     }
 /* -------------------------------X-Md---------- */
 /* X-md  */
@@ -1109,10 +995,7 @@ h3 {
 /* 64em--74em = 1064px to 1198px*/
 @media screen and (min-width: 64em) and (max-width: 74.9375em)
 {
-    .weekdays li,
-    .days li {
-        width: 13.1%;
-    }
+     
     .leslieTitle {
         font-family: 'Pacifico', cursive;  
         font-size: 45px;
@@ -1171,8 +1054,9 @@ h3 {
         /* margin-top: 20px; */
     }
  
-   img .portfolio-resume-headshot {
-    height: 0px;
+   
+.portfolio-resume-headshot {
+    max-width: 85%;
 }
 
 .small-12 {
@@ -1199,7 +1083,7 @@ font-size:210px;
     line-height: 43px;
     font-size: 47px;
     text-align: right;
-    color: #444;
+    color: #555;
     font-weight: bold;
     margin-left: 16px;
     margin-top: 50px;
