--- a/css/app.css
+++ b/css/app.css
@@ -590,6 +590,7 @@ font-size:110px;
 
 } 
   .mosesTitle {
+      font-family:'Monofett', cursive; 
             font-size: 75px;
             line-height: 20px;
             margin-left:1px;
@@ -850,6 +851,7 @@ h3 {
 
 } 
         .mosesTitle {
+            font-family:'Monofett', cursive; 
             font-size: 110px;
             line-height: 20px;
             margin-left:1px;
