--- a/css/app.css
+++ b/css/app.css
@@ -579,7 +579,7 @@ font-size:110px;
     margin-left: 16px;
 }
 
-   .leslieTitle {
+   H1 .leslieTitle {
     font-family: 'Pacifico', cursive;    
     line-height: 45px;
     margin-bottom: 20px;
