--- a/css/app.css
+++ b/css/app.css
@@ -30,18 +30,18 @@ body {
 
 .mosesTitle {
 font-family:'Monofett', cursive; 
-font-size:90px;
+font-size:80px;
         text-align: center;
 }
 
 
 H4 {
     font-family: 'Georgia', serif;
-        letter-spacing: .020em;
+    letter-spacing: .0em;
     line-height: 153px;
     font-size: 192px;
-    text-align: right;
-    font-weight: bold;
+    text-align: left;
+    font-weight: bolder;
     margin-top: 50px;
     margin-bottom: 50px;
     color: white;
@@ -287,13 +287,7 @@ h2 {
     text-align: right;
 }
 
-.bgimg {
-    /* background-image: url('images/bgColorFire.jpg'); */
-    /* border-radius: 13px;
-    padding: 2%;
-    background-repeat: no-repeat; */
-    /* background-color:floralwhite; */
-}
+
 
 button {
     /* @extend .transition*/
@@ -570,39 +564,32 @@ font-size:110px;
 }
 
  H4 {
-    font-family: 'Open Sans Condensed', sans-serif;
-    line-height: 43px;
-    font-size: 27px;
+    font-family: 'Georgia', serif;
+    line-height: 72px;
+    font-size: 90px;
     text-align: center;
     color: white;
     font-weight: bold;
-    margin-left: 16px;
 }
 
-   H1 .leslieTitle {
+   .leslieTitle {
     font-family: 'Pacifico', cursive;    
     line-height: 45px;
-    margin-bottom: 20px;
-    margin-right: 10px;
-    font-size: 55px;
-      text-align: right;
-      display: block;
+    font-size: 35px;
+      text-align: center;
 
 } 
   .mosesTitle {
       font-family:'Monofett', cursive; 
-            font-size: 75px;
-            line-height: 20px;
-            margin-left:1px;
-            display: block;
+    font-size: 65px;
+    line-height: 20px;
         }
 
-  #bluePic {
+#bluePic {
     display: inline-block;
-     vertical-align: middle;
-     max-width: 28%;
-   height: 45%;
-  -ms-interpolation-mode: bicubic;
+    vertical-align: middle;
+    max-width: 15%;
+    height: 35%;
 }
 
 .rezTitle{
@@ -843,31 +830,28 @@ h3 {
    .leslieTitle {
     font-family: 'Pacifico', cursive;    
     line-height: 45px;
-    margin-bottom: 20px;
-    margin-right: 10px;
-    font-size: 75px;
-      text-align: right;
-      /* display: block; */
+    margin-bottom: 5px;
+    font-size: 55px;
+      text-align: center;
 
 } 
         .mosesTitle {
             font-family:'Monofett', cursive; 
-            font-size: 110px;
+            font-size: 80px;
             line-height: 20px;
-            margin-left:1px;
-            /* display: block; */
+            margin-left:1px; 
         }
 
     H4 {
-    font-family: 'Open Sans Condensed', sans-serif;
-    line-height: 43px;
-    font-size: 47px;
-    text-align: right;
+    font-family: 'Georgia', serif;
+    line-height: 103px;
+    font-size: 140px;
+    text-align: center;
     color: white;
     font-weight: bold;
     margin-left: 16px;
     margin-top: 50px;
-     margin-bottom: 250px;
+    margin-bottom: 50px;
 }
         #textPencil {
             font-size: 48px;
