--- a/css/projects.css
+++ b/css/projects.css
@@ -20,6 +20,16 @@ body {
     display: none;
 }
 
+/* faTimeline {
+     display: inline-block; 
+     font: normal normal normal 14px/1 FontAwesome; 
+    font-size: 26px;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    border-radius: 15px;
+    margin-left: 14px;
+    margin-top: 12px;} */
+
 
 .leslieTitle {
     font-family: 'Pacifico', cursive; 
@@ -55,12 +65,20 @@ font-size:100px;
 img {
     display: inline-block;
     vertical-align: middle;
-    max-width: 100%;
+    max-width: 12%;
     height: auto;
     -ms-interpolation-mode: bicubic;
-    margin-bottom: -35px;
+    margin-bottom: -45px;
 }
  
+.webImage{
+    vertical-align: middle;
+    max-width: 100%;
+    -ms-interpolation-mode: bicubic;
+    margin-bottom: 10px;
+    border-radius: 11px;
+
+}
 
     /* START  socials icons --> */
  
@@ -260,6 +278,7 @@ img {
   transition: all 0.25s ease-in;
   width: 45%;
   background: transparent;
+  font-size: large;
 }
 
 .timeline .timeline-item .timeline-content p {
@@ -267,7 +286,7 @@ img {
 }
 
 .timeline .timeline-item .timeline-content p {
-  font-size: 16px;
+  font-size: 20px;
   line-height: 1.4;
   margin-bottom: 0;
 }
@@ -306,6 +325,7 @@ img {
     float: right;
     text-align: left;
     width: 90%;
+    font-size: large;
   }
   .timeline .timeline-item .timeline-content::before, .timeline .timeline-item .timeline-content.right::before {
     border-left: 0;
@@ -415,8 +435,10 @@ img {
     text-align: center;
 }
  .bold {
-font-weight: bolder;
-color: #FF4136;
+/* font-weight: bolder; */
+color: darkgrey;
+    font-family: 'Georgia', serif;
+    font-size:18px;
 }
 
 
@@ -831,12 +853,11 @@ margin-top: 2.24rem;
     font-family: 'Open Sans Condensed', sans-serif;
 }
 .webImage{
-    /* display: inline-block; */
-     vertical-align: middle;
-     max-width: 100%;
-   height: 45%;
-  -ms-interpolation-mode: bicubic;
-  display: block;
+    vertical-align: middle;
+    max-width: 100%;
+    -ms-interpolation-mode: bicubic;
+    margin-bottom: 10px;
+    border-radius: 11px;
 
 }
 
