--- a/css/app.css
+++ b/css/app.css
@@ -62,6 +62,18 @@ img {
 }
  
 
+a {
+    color: white;
+    text-decoration: none;
+}
+
+a:hover 
+{
+     color:white; 
+     text-decoration:none; 
+     cursor:pointer;  
+}
+
     /* START  socials icons --> */
  
  
