--- a/css/yours.css
+++ b/css/yours.css
@@ -7,6 +7,12 @@ body {
     background: black;
     color: whitesmoke;
 }
+
+/* START hero */
+
+
+
+/* END hero */
 .callout {
     background: black;
     padding: 10px;
@@ -19,6 +25,16 @@ body {
 .x-callout:before {
     display: none;
 }
+
+/* faTimeline {
+     display: inline-block; 
+     font: normal normal normal 14px/1 FontAwesome; 
+    font-size: 26px;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    border-radius: 15px;
+    margin-left: 14px;
+    margin-top: 12px;} */
 
 
 .leslieTitle {
@@ -43,7 +59,7 @@ H4 {
     font-size: 202px;
     text-align: center;
     font-weight: bolder;
-    color: white;
+    color: #ff1d8e;
         margin-bottom: 1.9rem;
 }
 
@@ -55,31 +71,20 @@ font-size:100px;
 img {
     display: inline-block;
     vertical-align: middle;
-    max-width: 100%;
+    max-width: 12%;
     height: auto;
     -ms-interpolation-mode: bicubic;
-    margin-bottom: -35px;
+    margin-bottom: -45px;
 }
  
+.webImage{
+    vertical-align: middle;
+    max-width: 100%;
+    -ms-interpolation-mode: bicubic;
+    margin-bottom: 10px;
+    border-radius: 11px;
 
-/* START responsive blog */
-
-
-.responsive-blog-post {
-  margin-bottom: 4rem;
 }
-
-.responsive-blog-post p {
-  color: whitesmoke;
-}
-
-
-.responsive-blog-post .individual-post {
-  margin-bottom: 4rem;
-}
-
-
-/* END responsive blog */
 a {
     color: white;
     text-decoration: none;
@@ -91,7 +96,7 @@ a:hover
      text-decoration:none; 
      cursor:pointer;  
 }
-
+    
     /* START  socials icons --> */
  
  
@@ -110,18 +115,6 @@ a:hover
   padding-right: 0.8rem;
   padding-bottom: 1rem;
   color: whitesmoke;
-}
-
-.btnLabel {
-    visibility: hidden;
-    color: white;
-    font-family: 'Georgia';
-    font-size: 22px;
-}
-.social-button:hover .btnLabel {
-    visibility: visible;
-  
-  margin-top: -34em;
 }
 
 @media screen and (max-width: 39.9375em) {
@@ -220,6 +213,150 @@ a:hover
     font-family: 'Lato', sans-serif; 
 }
 
+
+/* START timeline */
+
+.timeline .timeline-item::after, .timeline .timeline-item::before {
+  clear: both;
+  content: '';
+  display: block;
+  width: 100%;
+}
+
+.timeline {
+  margin: 30px auto;
+  padding: 0 10px;
+  position: relative;
+  transition: all 0.25s ease-in;
+  width: 100%;
+}
+
+.timeline::before {
+  background: #fefefe;
+  content: '';
+  height: 100%;
+  left: 50%;
+  position: absolute;
+  top: 0;
+  width: 3px;
+}
+
+.timeline::after {
+  clear: both;
+  content: '';
+  display: table;
+  width: 100%;
+}
+
+.timeline a {
+  color: #fefefe;
+  font-weight: bold;
+  transition: all 0.25s ease-in;
+}
+
+.timeline a:hover {
+  box-shadow: 0 1px 0px 0px #fefefe;
+  transition: all 0.25s ease-in;
+}
+
+.timeline .timeline-item {
+  margin-bottom: 50px;
+  position: relative;
+}
+
+.timeline .timeline-item .timeline-icon {
+  background: #fefefe;
+  border-radius: 50%;
+  height: 50px;
+  left: 50%;
+  margin-left: -23px;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  width: 50px;
+}
+
+.timeline .timeline-item .timeline-icon img,
+.timeline .timeline-item .timeline-icon svg {
+  left: 14px;
+  position: relative;
+  top: 11px;
+  color: #ff1d8e;
+}
+
+.timeline .timeline-item .timeline-icon svg {
+  top: 14px;
+   color: #ff1d8e
+}
+
+.timeline .timeline-item .timeline-content {
+  padding: 20px;
+  text-align: right;
+  transition: all 0.25s ease-in;
+  width: 45%;
+  background: transparent;
+  font-size: large;
+}
+
+.timeline .timeline-item .timeline-content p {
+  color: #fefefe;
+}
+
+.timeline .timeline-item .timeline-content p {
+  font-size: 20px;
+  line-height: 1.4;
+  margin-bottom: 0;
+}
+
+.timeline .timeline-item .timeline-content .timeline-content-date {
+    font-size: 19px;
+    font-weight: bold;
+    margin-bottom: 5px;
+    margin-left: 30px;
+    font-family: Georgia, serif;
+    color: #ff1d8e;
+
+}
+
+.timeline .timeline-item .timeline-content .timeline-content-month {
+  font-size: 0.875rem;
+  text-transform: uppercase;
+  font-weight: 400;
+}
+
+.timeline .timeline-item .timeline-content.right {
+  float: right;
+  text-align: left;
+}
+
+@media screen and (max-width: 39.9375em) {
+  .timeline {
+    margin: 30px;
+    padding: 0;
+    width: 90%;
+  }
+  .timeline::before {
+    left: 0;
+  }
+  .timeline .timeline-item .timeline-content {
+    float: right;
+    text-align: left;
+    width: 90%;
+    font-size: large;
+  }
+  .timeline .timeline-item .timeline-content::before, .timeline .timeline-item .timeline-content.right::before {
+    border-left: 0;
+    border-right: 7px solid #fefefe;
+    left: 10%;
+    margin-left: -6px;
+  }
+  .timeline .timeline-item .timeline-icon {
+    left: 0;
+  }
+}
+
+
+/* END timeline */
  
 /* START CARO Pics */
 
@@ -315,8 +452,10 @@ a:hover
     text-align: center;
 }
  .bold {
-font-weight: bolder;
-color: #FF4136;
+/* font-weight: bolder; */
+color: darkgrey;
+    font-family: 'Georgia', serif;
+    font-size:18px;
 }
 
 
@@ -375,7 +514,7 @@ button #getColorButton:focus {
     background-color: #FF4136;
 }
 #backTop {
-     background: #ff1d8e;
+    background: #ff1d8e;
     color: white;
     margin-top: 10px;
     font-size: 17px;
@@ -633,7 +772,7 @@ font-size:110px;
  H4 {
     font-family: 'Georgia', serif;
     line-height: 65px;
-    font-size: 76px;
+    font-size: 72px;
     text-align: center;
     color: white;
     font-weight: bold;
@@ -688,10 +827,6 @@ font-size:110px;
 margin-top: 2.24rem;
 }
 
-.responsive-blog-post p {
-  color: whitesmoke;
-}
-
 .rezTitle{
     font-family:'Monofett', cursive; 
     font-size:71px; 
@@ -737,12 +872,11 @@ margin-top: 2.24rem;
     font-family: georgia;
 }
 .webImage{
-    /* display: inline-block; */
-     vertical-align: middle;
-     max-width: 100%;
-   height: 45%;
-  -ms-interpolation-mode: bicubic;
-  display: block;
+    vertical-align: middle;
+    max-width: 100%;
+    -ms-interpolation-mode: bicubic;
+    margin-bottom: 10px;
+    border-radius: 11px;
 
 }
 
@@ -855,8 +989,8 @@ size: 20px;
 /* START TRY  responsive blog   */
 
 .responsive-blog-post {
-  margin-bottom: 1rem;
-  padding: 1.2rem;
+  margin-bottom: 4rem;
+  padding: 3rem;
 }
 
 h3 {
@@ -871,7 +1005,7 @@ h3 {
     font-size: 20px;
     font-style: normal;
     line-height: 1.82857143;
-    color: whitesmoke;
+    color: #8a8a8a;
 }
  p .baseTxt{
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
@@ -991,7 +1125,6 @@ h3 {
 #backTop {
     background: #ff1d8e;
     color: white;
-    margin-top: 5px;
     font-size: 17px;
     font-family: georgia;
 }
