'projects, resume' in pink on mobile

--- a/css/projects.css
+++ b/css/projects.css
@@ -768,7 +768,7 @@ font-size:110px;
     line-height: 65px;
     font-size: 72px;
     text-align: center;
-    color: white;
+    color: #ff1d8e;
     font-weight: bold;
     margin-top: unset;
         margin-bottom: 40px;
