--- a/css/resume.css
+++ b/css/resume.css
@@ -482,7 +482,7 @@ button {
     
     margin-top: 20px;
     background-color: #FF4136;
-    border: 1px solid #FF4136;
+    /* border: 1px solid #FF4136; */
     line-height: 0;
     display: inline-block;
     box-sizing: border-box;
@@ -498,7 +498,7 @@ button {
     font-size: 18px;
     font-weight: bold;
 }
-button:hover {
+/* button:hover {
     color: white;
     background-color: salmon;
     border: 2px solid white;
@@ -506,14 +506,13 @@ button:hover {
 button #getColorButton:focus {
     color: white;
     background-color: #FF4136;
-}
-#backTop {
-    background: #ff1d8e;
-    color: white;
-    margin-top: 10px;
+} */
+ #backTop {
+     background: black; 
+    color: #ff1d8e;
+    /* margin-top: 10px; */
     font-size: 17px;
     font-family: georgia;
-       
 }
 
 /* START SOCIAL */ 
@@ -888,56 +887,7 @@ margin-top: 2.24rem;
     width: 60%;
 
 }
-    #textCamera {
-        font-size: 25px;
-        color: white;
-        padding-left: none;
-        text-align: center;
-    font-family: 'Open Sans Condensed', sans-serif;
-        /* margin-top: 20px; */
-    } 
-
-    #textPencil{
-        font-size: 25px;
-        color: white;
-        padding-left: none;
-        margin-left: 20px;
-        text-align: center;
-    font-family: 'Open Sans Condensed', sans-serif;
-        /* margin-top: 20px; */
-    } 
-
-        #pencilFeel {
-            float: center;
-            width: 40%;
-            height: 40%;
-            /* margin-right: 100px; */
-            padding: 0px;
-            color: white;
-            font-size: 80px;
-            display: block;
-        }
-        #cameraFeel {
-            float: center;
-            width: 40%;
-            height: 40%;
-            padding: 0px;
-            margin-right: 50px;
-            color: white;
-            font-size: 80px;
-            display: block;
-        }
      
-       
-        #pencilColor {
-            font-size: 220px;
-            float: right;
-            width: 40%;
-            height: 40%;
-            margin-left: 30px;
-            padding: 0px;
-            color: white;
-        }
 
         #yearInColorHead {
     font-family: 'Syncopate', sans-serif;
@@ -949,74 +899,7 @@ margin-top: 2.24rem;
     }
 
 
-/* START TRY  responsive blog   */
 
-.responsive-blog-post {
-  margin-bottom: 4rem;
-  padding: 3rem;
-}
-
-h3 {
-        font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    font-size: 30px;
-    color: whitesmoke;
-    font-weight: bolder;
-}
-
-.responsive-blog-post p {
-      font-family: Georgia, Times, "Times New Roman", serif;
-    font-size: 20px;
-    font-style: normal;
-    line-height: 1.82857143;
-    color: #8a8a8a;
-}
- p .baseTxt{
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    font-size: 16px;
-    color: whitesmoke;
-}
-
-
-.responsive-blog-post .button {
-  padding: 0.85rem 3rem;
-  background: #FF4136;
-}
-
-.responsive-blog-post .button:hover {
-  background-color: darksalmon;
-  transition: color 0.3s ease-in;
-}
-
-.responsive-blog-post .individual-post {
-  margin-bottom: 4rem;
-}
-
-.responsive-blog-post h4 {
-  margin-bottom: 0;
-}
-
-.responsive-blog-post h4:hover {
-  text-decoration: underline;
-  transition: color 0.3s ease-in;
-}
-
-@media screen and (max-width: 39.9375em) {
-  .responsive-blog-post h4 {
-    font-size: 1.5rem;
-  }
-}
-
-.responsive-blog-post img {
-  margin-bottom: 1.5rem;
-}
-
-.responsive-blog-post .date {
-  font-size: 0.8rem;
-  color: #8a8a8a;
-}
-
-
-/* END TRY  responsive blog   */
 
 
     /* --------------------------------Md---------- */
